fixed content overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ a:hover{
     max-width: 950px;
     margin: 0 auto;
     padding: 50px;
+    overflow: auto;
 }
 
 .col-narrow{
